# named-bitfields

./: .gitignore  CHANGELOG.md  LICENSE  bitfields.cabal  log
app/: Main.hs
lib/Data/BitPacking/: BitField.hs  PackedFields.hs  PackedFieldsM.hs  Talk.hs  TypeMachinery.hs
lib/Data/BitPacking/BitField/: Overloaded.hs
lib/Data/Examples/: Array.hs
