cabal-version:      3.0
name:               bitfields
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library bitpacking
    import:           warnings
    Exposed-Modules:
        Data.BitPacking.BitField
        Data.BitPacking.BitField.Overloaded
        Data.BitPacking.TypeMachinery
        Data.BitPacking.PackedFields
        Data.BitPacking.PackedFieldsM
        Data.Examples.Array
    -- other-extensions:
    build-depends:    base >=4.18.2.1, bytestring >= 0.12, primitive
    hs-source-dirs:   lib
    default-language: GHC2021

executable test-packing
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:
        base >=4.18.2.1,
        bitpacking
    hs-source-dirs:   app
    default-language: GHC2021

